--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,8 @@
+<p><%= image_tag @book.user.get_profile_image(100,100) %></p>
 
- <p>本のタイトル:<%= @book.title %></p>
+<p>本のタイトル:<%= @book.title %></p>
 
- <p>感想:<%= @book.body %></p>
+<p>感想:<%= @book.body %></p>
 
 
 
