--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <header>
     <% if user_signed_in? %>
       <li>
-        <%= link_to "Home", about_path %>
+        <%= link_to "Home", user_path(current_user) %>
       </li>
        <li>
         <%= link_to "Users", about_path %>
