[Add]遷移先項目作成

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,5 @@
+<%= render 'list', user: @user %>
+
 <p><%= image_tag @book.user.get_profile_image(100,100) %></p>
 
 <p>本のタイトル:<%= @book.title %></p>
