--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <%= link_to "Home", user_path(current_user) %>
       </li>
        <li>
-        <%= link_to "Users", about_path %>
+        <%= link_to "Users", users_path %>
       </li>
        <li>
         <%= link_to "Books", books_path %>
