--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,27 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+
+
+
+<%= form_with model: @book do |f| %>
+
+<div class="field">
+ <%= f.label :title, style:"font-size: 15px;" %>
+ <%= f.text_field :title, style:"width: 268px; height: 30px; padding: 1px 2px; border: 1px solid black; border-radius: 3px;" %>
+</div>
+
+<div class="field">
+ <%= f.label :body, style:"font-size: 15px;" %>
+ <%= f.text_area :body, style:"width: 236px; height: 50px; padding: 1px 2px; border: 1px solid black; border-radius: 3px;" %>
+</div>
+
+<div class="field">
+<%= f.submit 'Update Book', style:"width: 140px; height: 28px; padding: 1px 6px; border: 1px solid black; border-radius: 3px;"%>
+</div>
+
+<% end %>
+
+
+
+<%= link_to "Show", book_path(@book.id) %>
+|
+<%= link_to "Back", books_path %>
