--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,9 +7,8 @@
 <p>感想:<%= @book.body %></p>
 
 
-
+<% if @book.user == current_user %>
 <%= link_to "Edit", edit_book_path(@book.id), class:"black_link" %>
 |
-<%= link_to "Back", books_path, class:"black_link" %>
-
-
+<%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "本当に消して大丈夫ですか?" %>
+<% end %>
