[Add]Homeのログインサインイン,AboutのURL追加

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,6 @@
-<h1>Topページ</h1>
+<h1>welcome to Bookers !!</h1>
+
+<%= link_to "Log in", new_user_session_path, class:'logbutton' %>
+
+<%= link_to "Sign up", new_user_registration_path, class:'signbutton' %>
 
