--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.logbutton {
+  padding: 1px 6px;
+  color: white;
+  background-color: blue;
+  border-radius: 3px;
+}
+
+.signbutton{
+  padding: 1px 6px;
+  color: white;
+  background-color: green;
+  border-radius: 3px;
+}
