--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,16 +4,20 @@
 
 <table>
   <tr>
+   <th></th>
    <th>本のタイトル</th>
    <th>感想</th>
-   <th></th>
   </tr>
 
   <% @books.each do |book| %>
   <tr>
-   <td> <%= image_tag book.user.get_profile_image(100,100) %> </td>
-   <td> <%=book.title %> </td>
-   <td> <%=book.body %> </td>
+   <td>
+    <%= link_to user_path(@user.id) do %> 
+      <%= image_tag book.user.get_profile_image(100,100) %>
+    <% end %>
+   </td>
+   <td> <%= link_to book.title, book_path(book.id) %> </td>
+   <td> <%= book.body %> </td>
   </tr>
   <% end %>
 </table>
