--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
     <header>
     <% if user_signed_in? %>
       <li>
+        <%= link_to "Bookers", root_path %>
+      </li>
+      <li>
         <%= link_to "Home", user_path(current_user) %>
       </li>
        <li>
@@ -26,6 +29,9 @@
         <%= link_to "Log_out", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
+      <li>
+        <%= link_to "Bookers", root_path %>
+      </li>
       <li>
         <%= link_to "Home", root_path %>
       </li>
