--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,15 +4,16 @@
 
 <table>
   <tr>
+   <th></th>
    <th>本のタイトル</th>
    <th>感想</th>
-   <th></th>
   </tr>
 
   <% @books.each do |book| %>
   <tr>
-    <td> <%=book.title %> </td>
-    <td> <%=book.body %> </td>
+    <td> <%= image_tag @user.get_profile_image(100,100) %> </td>
+    <td> <%= link_to book.title, book_path(book.id) %> </td>
+    <td> <%= book.body %> </td>
   </tr>
   <% end %>
 </table>
