--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,10 +3,10 @@
 <p>Book detail</p>
 
 <p>
-  <%= link_to user_path(@user.id) do %>
+  <%= link_to user_path(@book.user.id) do %>
   <%= image_tag @book.user.get_profile_image(100,100) %><br>
-  <%= @user.name%>
-  <% end %>
+  <%= @book.user.name%>
+  <% end%>
 </p>
 
 <p><%= @book.title %></p>
