--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.updatebutton {
+  padding: 1px 6px;
+  color: white;
+  background-color: black;
+  border-radius: 3px;
+}
