--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -12,8 +12,8 @@
 
 <div>
   <h3><%= user.name %></h3>
-  <%= image_tag user.get_profile_image(100,100) %>
-  <%= user.introduction %>
+  <%= image_tag @user.get_profile_image(100,100) %>
+  <%= @user.introduction %>
   <% if user == current_user %>
     <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
   <% end %>
