--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,6 +11,6 @@
   <label for="inputIntroduction">自己紹介文</label>
   <%= f.text_field :introduction, id:"inputIntroduction" %>
 
-  <%= f.submit "変更を保存" %>
+  <%= f.submit "Update User", class:'updatebutton' %>
 
 <% end %>
