--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
 
   <% @books.each do |book| %>
   <tr>
-    <td> <%= image_tag @users.get_profile_image(100,100) %> </td>
+    <td> <%= image_tag @user.get_profile_image(100,100) %> </td>
     <td> <%= link_to book.title, book_path(book.id) %> </td>
     <td> <%= book.body %> </td>
   </tr>
