--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -10,7 +10,7 @@
 </div>
 
 <div class="field">
- <%= f.label :body, style:"font-size: 15px;" %>
+ <%= f.label :opinion, style:"font-size: 15px;" %>
  <%= f.text_area :body, style:"width: 236px; height: 50px; padding: 1px 2px; border: 1px solid black; border-radius: 3px;" %>
 </div>
 
