--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,7 +12,7 @@
   <% @books.each do |book| %>
   <tr>
    <td>
-    <%= link_to user_path(@user.id) do %> 
+    <%= link_to user_path(book.user.id) do %>
       <%= image_tag book.user.get_profile_image(100,100) %>
     <% end %>
    </td>
