--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
         <%= link_to "Books", books_path %>
       </li>
        <li>
-        <%= link_to "Log_out", destroy_user_session_path, method: :delete %>
+        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
       <li>
@@ -39,10 +39,10 @@
         <%= link_to "About", about_path %>
       </li>
        <li>
-        <%= link_to "Sign_up", new_user_registration_path %>
+        <%= link_to "Sign up", new_user_registration_path %>
       </li>
        <li>
-        <%= link_to "Log_in", new_user_session_path %>
+        <%= link_to "Log in", new_user_session_path %>
       </li>
     <% end %>
     </header>
