--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,9 +11,13 @@
 
   <% @books.each do |book| %>
   <tr>
-    <td> <%= image_tag @user.get_profile_image(100,100) %> </td>
+    <td><%= link_to user_path(@user.id) do %>
+        <%= image_tag @user.get_profile_image(100,100) %>
+        <% end %>
+    </td>
     <td> <%= link_to book.title, book_path(book.id) %> </td>
     <td> <%= book.body %> </td>
   </tr>
   <% end %>
 </table>
+
