--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,51 +2,89 @@
 <html>
   <head>
     <title>Bookers2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <script src="https://kit.fontawesome.com/073c906867.js" crossorigin="anonymous"></script>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+</head>
 
   <body>
     <header>
-    <% if user_signed_in? %>
-      <li>
-        <%= link_to "Bookers", root_path %>
-      </li>
-      <li>
-        <%= link_to "Home", user_path(current_user) %>
-      </li>
-       <li>
-        <%= link_to "Users", users_path %>
-      </li>
-       <li>
-        <%= link_to "Books", books_path %>
-      </li>
-       <li>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "Bookers", root_path %>
-      </li>
-      <li>
-        <%= link_to "Home", root_path %>
-      </li>
-      <li>
-        <%= link_to "About", about_path %>
-      </li>
-       <li>
-        <%= link_to "Sign up", new_user_registration_path %>
-      </li>
-       <li>
-        <%= link_to "Log in", new_user_session_path %>
-      </li>
-    <% end %>
+     <nav class="navbar">
+       <div class="container">
+      
+      <a><%= link_to "Bookers", root_path %></a>
+        
+      <ul class="navbar-nav">
+       <% if user_signed_in? %>
+        
+        <li class="nav-item">
+         <%= link_to user_path(current_user) do %>
+         <i class="fa-solid fa-house"></i>
+         <span>Home</span>
+         <% end %>
+        </li>
+        
+        <li class="nav-item">
+         <%= link_to users_path do %>
+         <i class="fa-solid fa-users"></i>
+         <span>Users</span>
+         <% end %>
+        </li>
+        
+        <li class="nav-item">
+         <%= link_to books_path do %>
+         <i class="fa-solid fa-book-open"></i>
+         <span>Bookers</span>
+         <% end %>
+        </li>
+        
+        <li class="nav-item">
+         <%= link_to destroy_user_session_path, method: :delete do %>
+         <i class="fa-solid fa-right-from-bracket"></i>
+         <span>Log out</span>
+         <% end %>
+        </li>
+
+       <% else %>
+       
+        <li class="nav-item">
+         <%= link_to root_path do %>
+         <i class="fa-solid fa-house"></i>
+         <span>Home</span>
+         <% end %>
+        </li>
+
+        <li class="nav-item">
+         <%= link_to about_path do %>
+         <i class="fa-solid fa-link"></i>
+         <span>About</span>
+         <% end %>
+        </li>
+        
+        <li class="nav-item">
+         <%= link_to new_user_registration_path do %>
+         <i class="fa-solid fa-user-plus"></i>
+         <span>Sign up</span>
+         <% end %>
+        </li>
+        
+        <li class="nav-item">
+         <%= link_to new_user_session_path do %>
+         <i class="fa-solid fa-right-to-bracket"></i>
+         <span>Log in</span>
+         <% end %>
+        </li>
+        
+       <% end %>
+      </ul>
+      </div>
+     </nav>
     </header>
+    
     <% flash.each do |message_type, message| %>
       <div class="flash-message <%= message_type %>"><%= message %></div>
     <% end %>
