--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,13 +1,1 @@
-<h1>Aboutページ</h1>
-<p>遷移先未設定 設定出来たら削除していく</p>
-
-<br>
-<p>動的ヘッダー</p>
-<p>OK</p>
-
-
-<br>
-<p>バリデーションエラー設定</p>
-<p></p>
-<p></p>
-<p></p>
+<h1>welcome to <i class="fa-solid fa-book"></i><span>Bookers</span> !</h1>
