--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.edit-item {
+  i.fa-solid.fa-wrench {
+    width: 200px; 
+    height: 30px; 
+  {
+}
