--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,15 @@
-<h1>welcome to Bookers !!</h1>
+<h1>welcome to <i class="fa-solid fa-book"></i><br>
+<span>Bookers</span> !!</h1>
+
+<p>In <i class="fa-solid fa-book"><span>Bookers</span>,</p>
+
+<p>
+  you can share and exchange your opinions , <br>
+  inpressions , and emotions
+</p>
+
+<p>about various books!</p>
+
 
 <%= link_to "Log in", new_user_session_path, class:'logbutton' %>
 
