[Add]グリッド以外OK

--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -9,28 +9,28 @@
 <% end %>
 </div>
 
-
-<div>
+<div class="row">
+ <div class="col-md-3">
+  <div>
   <h3><%= user.name %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
   <%= @user.introduction %>
     <p class="edit-item">
      <%= link_to edit_user_path(@user) do %>
-     <i class="fa-solid fa-wrench"></i>
+     <i class="fa-solid fa-user-gear"></i>
      <% end %>
     </p>
-</div>
+  </div>
 
- <h2>New book</h2>
-
-<%= form_with model: @book, url: '/books', method: :post do |f| %>
-
- <h4>本のタイトル</h4>
- <%= f.text_field :title, value: '' %>
-
- <h4>感想</h4>
- <%= f.text_area :body, value: '' %>
-
-<%= f.submit 'Create Book', style:"width: 134px; height: 30px; padding: 1px 6px; border: 1px solid black; border-radius: 3px;" %>
-
+  <div>
+   <h2>New book</h2>
+   <%= form_with model: @book, url: '/books', method: :post do |f| %>
+   <h4>本のタイトル</h4>
+   <%= f.text_field :title, value: '' %>
+   <h4>感想</h4>
+   <%= f.text_area :body, value: '' %>
+   <%= f.submit 'Create Book', style:"width: 134px; height: 30px; padding: 1px 6px; border: 1px solid black; border-radius: 3px;" %>
+  </div>
+ </div>
  <% end %>
+</div>
