--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,8 @@
+
 <h1>welcome to <i class="fa-solid fa-book"></i><br>
 <span>Bookers</span> !!</h1>
 
-<p>In <i class="fa-solid fa-book"><span>Bookers</span>,</p>
+<p>In Bookers,</p>
 
 <p>
   you can share and exchange your opinions , <br>
