--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -2,9 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-.edit-item {
-  i.fa-solid.fa-wrench {
-    width: 200px; 
-    height: 30px; 
-  {
+.row {
+  display: flex;
 }
