--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,23 +1,29 @@
+
 <%= render 'list', user: @user %>
 
-<h1>Books</h1>
+<div class="row">
+ <div class="offset-md-1"></div>
+ <div class="col-md-8">
+  <h1>Books</h1>
 
-<table>
-  <tr>
-   <th></th>
-   <th>本のタイトル</th>
-   <th>感想</th>
-  </tr>
+  <table>
+    <tr>
+     <th></th>
+     <th>本のタイトル</th>
+     <th>感想</th>
+    </tr>
 
-  <% @books.each do |book| %>
-  <tr>
-   <td>
-    <%= link_to user_path(book.user.id) do %>
-      <%= image_tag book.user.get_profile_image(100,100) %>
+    <% @books.each do |book| %>
+    <tr>
+     <td>
+      <%= link_to user_path(book.user.id) do %>
+        <%= image_tag book.user.get_profile_image(100,100) %>
+      <% end %>
+     </td>
+     <td> <%= link_to book.title, book_path(book.id) %> </td>
+     <td> <%= book.body %> </td>
+    </tr>
     <% end %>
-   </td>
-   <td> <%= link_to book.title, book_path(book.id) %> </td>
-   <td> <%= book.body %> </td>
-  </tr>
-  <% end %>
-</table>
+  </table>
+  </div>
+</div>
