--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,3 +1,7 @@
-<h1>welcome to <i class="fa-solid fa-book"></i><span>Bookers</span> !</h1>
-
-<p>aaaaaaaa</p>
+<div class="container">
+ <div class="row">
+  <div class="col-sm-12.col-md-8.col-lg-5.px-sm-0.mx-auto">
+   <h1>welcome to <i class="fa-solid fa-book"></i>Bookers!</h1>
+  </div>
+ </div>
+</div>
