--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,27 +1,41 @@
-<h1>Editing Book</h1>
+<%= flash[:notice]%>
 
-
-
-<%= form_with model: @book do |f| %>
-
-<div class="field">
- <%= f.label :title, style:"font-size: 15px;" %>
- <%= f.text_field :title, style:"width: 268px; height: 30px; padding: 1px 2px; border: 1px solid black; border-radius: 3px;" %>
+<% if @book.errors.any? %>
+<div class="error-message">
+ <h3><%= @book.errors.count %>errors prohibited this book from being saved:</h3>
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+ <% end %>
 </div>
 
-<div class="field">
- <%= f.label :opinion, style:"font-size: 15px;" %>
- <%= f.text_area :body, style:"width: 236px; height: 50px; padding: 1px 2px; border: 1px solid black; border-radius: 3px;" %>
+<div class="container">
+ <div class="row">
+  <div class="col-sm-12.col-md-8.col-lg-5.px-sm-0.mx-auto">
+  <h1>Editing Book</h1>
+  <%= form_with model: @book do |f| %>
+
+   <div class="field">
+    <%= f.label :title, style:"font-size: 15px;" %><br>
+    <%= f.text_field :title, style:"width: 268px; height: 30px; padding: 1px 2px; border: 1px solid black; border-radius: 3px;" %>
+   </div>
+
+   <div class="field">
+    <%= f.label :opinion, style:"font-size: 15px;" %><br>
+    <%= f.text_area :body, style:"width: 236px; height: 100px; padding: 1px 2px; border: 1px solid black; border-radius: 3px;" %>
+   </div>
+
+   <div class="field">
+   <%= f.submit 'Update Book', style:"width: 180px; height: 40px; padding: 1px 6px; border: 1px solid black; border-radius: 3px;"%>
+   </div>
+   
+   <%= link_to "Show", book_path(@book.id) %>
+   |
+   <%= link_to "Back", books_path %>
+  </div>
+ </div>
 </div>
 
-<div class="field">
-<%= f.submit 'Update Book', style:"width: 140px; height: 28px; padding: 1px 6px; border: 1px solid black; border-radius: 3px;"%>
-</div>
-
-<% end %>
-
-
-
-<%= link_to "Show", book_path(@book.id) %>
-|
-<%= link_to "Back", books_path %>
+  <% end %>
