--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,24 @@
+<%= flash[:notice]%>
 
-<%= render 'list', user: @user %>
+<% if @book.errors.any? %>
+<div class="error-message">
+ <h3><%= @book.errors.count %>errors prohibited this book from being saved:</h3>
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+  <% end %>
+</div>
 
-<div class="row">
- <div class="offset-md-1"></div>
- <div class="col-md-8">
+<div class="container">
+ <div class="row">
+  <div class="col-md-3">
+   <%= render 'list', user: @user %>
+  </div>
+  
+  <div class="col-md-8 offset-md-1">
   <h1>Books</h1>
-
   <table>
     <tr>
      <th></th>
@@ -15,15 +28,14 @@
 
     <% @books.each do |book| %>
     <tr>
-     <td>
-      <%= link_to user_path(book.user.id) do %>
-        <%= image_tag book.user.get_profile_image(100,100) %>
-      <% end %>
-     </td>
+     <td><%= link_to user_path(book.user.id) do %>
+         <%= image_tag book.user.get_profile_image(100,100) %>
+         <% end %></td>
      <td> <%= link_to book.title, book_path(book.id) %> </td>
      <td> <%= book.body %> </td>
     </tr>
     <% end %>
   </table>
   </div>
+ </div>
 </div>
