--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,7 @@
+<div class="container">
+ <div class="row">
+  <div class="col-sm-12.col-md-8.col-lg-5.px-sm-0.mx-auto">
+
 <h2>Sign up</h2>
 
 <%= form_with model: @user, url: user_registration_path do |f| %>
@@ -32,3 +36,7 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+  </div>
+ </div>
+</div>
