--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,84 +12,69 @@
   </head>
 
   <body>
-   <div class="container">
-    <header>
-     <nav class="navbar navbar-expand-lg navbar-light">
+   <header>
+    <nav class="navbar navbar-expand-lg navbar-light">
+     <div class="container">
+      <%= link_to "Bookers", root_path %>
 
-       <%= link_to "Bookers", root_path %>
-
-      <div class="row">
       <ul class="navbar-nav ml-auto">
        <% if user_signed_in? %>
-
         <li class="nav-item">
          <%= link_to user_path(current_user) do %>
          <i class="fa-solid fa-house"></i>
          <span>Home</span>
          <% end %>
         </li>
-
         <li class="nav-item">
          <%= link_to users_path do %>
          <i class="fa-solid fa-users"></i>
          <span>Users</span>
          <% end %>
         </li>
-
         <li class="nav-item">
          <%= link_to books_path do %>
          <i class="fa-solid fa-book-open"></i>
          <span>Books</span>
          <% end %>
         </li>
-
         <li class="nav-item">
          <%= link_to destroy_user_session_path, method: :delete do %>
          <i class="fa-solid fa-right-from-bracket"></i>
          <span>Log out</span>
          <% end %>
         </li>
-
        <% else %>
-
         <li class="nav-item">
          <%= link_to root_path do %>
          <i class="fa-solid fa-house"></i>
          <span>Home</span>
          <% end %>
         </li>
-
         <li class="nav-item">
          <%= link_to about_path do %>
          <i class="fa-solid fa-link"></i>
          <span>About</span>
          <% end %>
         </li>
-
         <li class="nav-item">
          <%= link_to new_user_registration_path do %>
          <i class="fa-solid fa-user-plus"></i>
          <span>Sign up</span>
          <% end %>
         </li>
-
         <li class="nav-item">
          <%= link_to new_user_session_path do %>
          <i class="fa-solid fa-right-to-bracket"></i>
          <span>Log in</span>
          <% end %>
         </li>
-
        <% end %>
       </ul>
-      </div>
-     </nav>
-    </header>
-
-    <% flash.each do |message_type, message| %>
-      <div class="flash-message <%= message_type %>"><%= message %></div>
-    <% end %>
+     </div>
+    </nav>
+   </header>
+   <main class="mb-auto">
     <%= yield %>
-   </div>
+   </main>
   </body>
 </html>
