--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,23 +1,30 @@
-<%= render 'books/list', user: @user %>
+<%= flash[:notice]%>
 
-<h1>Books</h1>
+<div class="container">
+ <div class="row">
+  <div class="col-md-3">
+  <%= render 'books/list', user: @user %>
+  </div>
 
-<table>
-  <tr>
-   <th></th>
-   <th>本のタイトル</th>
-   <th>感想</th>
-  </tr>
+  <div class="col-md-8 offset-md-1">
+   <h1>Books</h1>
+   <table>
+     <tr>
+      <th></th>
+      <th>本のタイトル</th>
+      <th>感想</th>
+     </tr>
 
-  <% @books.each do |book| %>
-  <tr>
-    <td><%= link_to user_path(@user.id) do %>
-        <%= image_tag @user.get_profile_image(100,100) %>
-        <% end %>
-    </td>
-    <td> <%= link_to book.title, book_path(book.id) %> </td>
-    <td> <%= book.body %> </td>
-  </tr>
-  <% end %>
-</table>
-
+    <% @books.each do |book| %>
+     <tr>
+       <td><%= link_to user_path(@user.id) do %>
+           <%= image_tag @user.get_profile_image(100,100) %>
+           <% end %> </td>
+       <td> <%= link_to book.title, book_path(book.id) %> </td>
+       <td> <%= book.body %> </td>
+     </tr>
+    <% end %>
+   </table>
+  </div>
+ </div>
+</div>
