--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -11,13 +11,15 @@
      <p>about various books!</p>
   </div>
  </div>
+  
  <div class="row">
-  <a class="col-sm-12.col-md-8.col-lg-5.px-sm-0.mx-auto">
+  <div class="col-sm-12.col-md-8.col-lg-5.px-sm-0.mx-auto">
    <%= link_to "Log in", new_user_session_path, style:"border: 1px solid black; color: white; background-color: blue; border-radius: 3px;" %>
-  </a>
+  </div>
  </div>
  <div class="row">
+  <div class="col-sm-12.col-md-8.col-lg-5.px-sm-0.mx-auto">
    <%= link_to "Sign up", new_user_registration_path, style:"border: 1px solid black; color: white; background-color: green; border-radius: 3px;" %>
  </div>
- 
+ </div>
 </div>
