--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,9 @@
 <html>
   <head>
     <title>Bookers2</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1">
     <script src="https://kit.fontawesome.com/073c906867.js" crossorigin="anonymous"></script>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -13,63 +12,61 @@
 
   <body>
    <header>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
      <div class="container">
-      <%= link_to "Bookers", root_path %>
-
-      <ul class="navbar-nav ml-auto">
+      <a class="navbar-brand" href="/"><span>Bookers</span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+       <ul class="navbar-nav ml-auto">
        <% if user_signed_in? %>
-        <li class="nav-item">
-         <%= link_to user_path(current_user) do %>
-         <i class="fa-solid fa-house"></i>
-         <span>Home</span>
-         <% end %>
-        </li>
-        <li class="nav-item">
-         <%= link_to users_path do %>
-         <i class="fa-solid fa-users"></i>
-         <span>Users</span>
-         <% end %>
-        </li>
-        <li class="nav-item">
-         <%= link_to books_path do %>
-         <i class="fa-solid fa-book-open"></i>
-         <span>Books</span>
-         <% end %>
-        </li>
-        <li class="nav-item">
-         <%= link_to destroy_user_session_path, method: :delete do %>
-         <i class="fa-solid fa-right-from-bracket"></i>
-         <span>Log out</span>
-         <% end %>
-        </li>
-       <% else %>
-        <li class="nav-item">
-         <%= link_to root_path do %>
-         <i class="fa-solid fa-house"></i>
-         <span>Home</span>
-         <% end %>
-        </li>
-        <li class="nav-item">
-         <%= link_to about_path do %>
-         <i class="fa-solid fa-link"></i>
-         <span>About</span>
-         <% end %>
-        </li>
-        <li class="nav-item">
-         <%= link_to new_user_registration_path do %>
-         <i class="fa-solid fa-user-plus"></i>
-         <span>Sign up</span>
-         <% end %>
-        </li>
-        <li class="nav-item">
-         <%= link_to new_user_session_path do %>
-         <i class="fa-solid fa-right-to-bracket"></i>
-         <span>Log in</span>
-         <% end %>
-        </li>
+       
+          <li>
+            <%= link_to user_path(current_user),class: 'nav-link text-light' do %>
+              <i class="fas fa-home"></i> Home
+            <% end %>
+          </li>
+          <li>
+            <%=  link_to users_path,class: 'nav-link text-light' do %>
+              <i class="fas fa-users"></i> Users
+            <% end %>
+          </li>
+          <li>
+            <%=  link_to books_path ,class: 'nav-link text-light' do %>
+              <i class="fas fa-book-open"></i> Books
+            <% end %>
+          </li>
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete,class: 'nav-link text-light' do %>
+              <i class="fas fa-sign-out-alt"></i> Log out
+            <% end %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to root_path,class: 'nav-link text-light' do %>
+              <i class="fas fa-home"></i> Home
+            <% end %>
+          </li>
+          <li>
+            <%= link_to about_path,class: 'nav-link text-light' do %>
+              <i class="fas fa-link"></i> About
+            <% end %>
+          </li>
+          <li>
+            <%= link_to new_user_registration_path,class: 'nav-link text-light' do %>
+              <i class="fas fa-user-plus"></i> Sign up
+            <% end %>
+          </li>
+          <li>
+            <%= link_to new_user_session_path ,class: 'nav-link text-light' do %>
+              <i class="fas fa-sign-in-alt"></i> Log in
+            <% end %>
+          </li>
        <% end %>
-      </ul>
+       </ul>
+      </div>
      </div>
     </nav>
    </header>
