--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,24 +1,33 @@
 
 <table>
   <tr><th><%= image_tag user.get_profile_image(100,100) %></th></tr>
-  <tr><th>name:<%= user.name %></th></tr>
-  <tr><th>Introduction:<%= user.introduction %></th></tr>
-  <tr><th>
-   <%= link_to edit_user_path(user) do %>
-     <i class="fa-solid fa-user-gear"></i>
-     <% end %></th></tr>
+  <tr>
+	  <th>name</th>
+	  <th><%= user.name %></th>
+  </tr>
+  <tr>
+	  <th>introduction</th>
+	  <th><%= user.introduction %></th>
+  </tr>
 </table>
 
+<div class='row'>
+  <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
+    <i class="fas fa-user-cog"></i>
+  <% end %>
+</div>
 
-   <h4>New book</h4>
+<h4>New book</h4>
    <%= form_with model: @book, url: '/books', method: :post do |f| %>
-   <div>
-   <%= f.label :title, style:"font-size: 15px;" %><br>
-   <%= f.text_field :title, value: '' %>
+   <div class="form-group">
+    <%= f.label :title %>
+    <%= f.text_field :title, value: "", class: 'form-control book_title' %>
    </div>
-   <div>
-   <%= f.label :opinion, style:"font-size: 15px;" %><br>
-   <%= f.text_area :body, value: '' %>
+   <div class="form-group">
+    <%= f.label :opinion %>
+    <%= f.text_area :body, value: "", class: 'form-control book_body' %>
    </div>
-   <%= f.submit 'Create Book', style:"width: 150px; height: 40px; padding: 1px 6px; border: 1px solid black; border-radius: 3px;" %>
+   <div class="form-group">
+    <%= f.submit "Create Book", method: :post, class: 'btn btn-success' %>
+   </div>
    <% end %>
