--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<%= flash[:notice]%>
+<%= flash[:alert]%>
 
 <% if @book.errors.any? %>
 <div class="error-message">
@@ -13,24 +13,22 @@
 
 <div class="container">
  <div class="row">
-  <div class="col-sm-12.col-md-8.col-lg-5.px-sm-0.mx-auto">
+  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
   <h1>Editing Book</h1>
   <%= form_with model: @book do |f| %>
 
-   <div class="field">
-    <%= f.label :title, style:"font-size: 15px;" %><br>
-    <%= f.text_field :title, style:"width: 268px; height: 30px; padding: 1px 2px; border: 1px solid black; border-radius: 3px;" %>
+   <div class="form-group">
+    <%= f.label :title %>
+    <%= f.text_field :title, class: 'form-control book_title' %>
    </div>
-
-   <div class="field">
-    <%= f.label :opinion, style:"font-size: 15px;" %><br>
-    <%= f.text_area :body, style:"width: 236px; height: 100px; padding: 1px 2px; border: 1px solid black; border-radius: 3px;" %>
+   <div class="form-group">
+    <%= f.label :opinion %>
+    <%= f.text_area :body, class: 'form-control book_body' %>
    </div>
-
-   <div class="field">
-   <%= f.submit 'Update Book', style:"width: 180px; height: 40px; padding: 1px 6px; border: 1px solid black; border-radius: 3px;"%>
+   <div class="form-group">
+    <%= f.submit "Update Book", class: 'btn btn-success' %>
    </div>
-   
+    <% end %>
    <%= link_to "Show", book_path(@book.id) %>
    |
    <%= link_to "Back", books_path %>
@@ -38,4 +36,3 @@
  </div>
 </div>
 
-  <% end %>
