--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,20 +7,22 @@
    </div>
 
 
-<div class="col-md-8 offset-md-1">
-<p>Book detail</p>
-
-<table>
-  <tr>
-    <th><%= link_to user_path(@book.user.id) do %>
-        <%= image_tag @book.user.get_profile_image(100,100) %><br>
-        <%= @book.user.name%>
-        <% end %></th>
-    <th><%= @book.title %></th>
-    <th><%= @book.body %></th>
-  <% if @book.user == current_user %>
-    <th><%= link_to "Edit", edit_book_path(@book.id) %></th>
-    <th><%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm" => "本当に消して大丈夫ですか?" %></th>
-  <% end %>
-  </tr>
-</table>
+  <div class="col-md-8 offset-md-1">
+   <p>Book detail</p>
+   <table class='table'>
+     <tr>
+       <td><%= link_to user_path(@book.user.id) do %>
+           <%= image_tag @book.user.get_profile_image(100,100) %><br>
+           <%= @book.user.name%>
+           <% end %></td>
+       <td><%= link_to @book.title, @book %></td>
+       <td><%= @book.body %></td>
+     <% if @book.user == current_user %>
+       <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
+       <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+     <% end %>
+     </tr>
+   </table>
+  </div>
+ </div>
+</div>
