--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -13,21 +13,25 @@
 
 <div class="container">
  <div class="row">
-  <div class="col-sm-12.col-md-8.col-lg-5.px-sm-0.mx-auto">
+  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
    <h2>User info</h2>
    <%= form_with model: @user do |f| %>
-
+    <div class="form-group">
     <label for="inputName">Name</label><br>
-    <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-    <br>
+    <%= f.text_field :name, class: "form-control name", autofocus: true, id:"inputName", placeholder:"名前"%>
+    </div>
+    <div class="form-group">
     <label for="inputImage">ProfileImage</label><br>
-    <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-    <br>
+    <%= f.file_field :profile_image, class: "form-control-file user_image", placeholder: "プロフィール画像", accept: "image/*" %>
+    </div>
+    <div class="form-group">
     <label for="inputIntroduction">自己紹介文</label><br>
-    <%= f.text_field :introduction, id:"inputIntroduction" %>
-    <br>
-    <%= f.submit "Update User", class:'updatebutton' %>
-  <% end %>
+    <%= f.text_field :introduction, class: "form-control introduction", id:"inputIntroduction" %>
+    </div>
+    <div class="form-group">
+    <%= f.submit "Update User", class: 'btn btn-secondary' %>
+    </div>
+   <% end %>
   </div>
  </div>
 </div>
