--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,21 +7,25 @@
   </div>
   
   <div class="col-md-8 offset-md-1">
-   <h1>Users</h1>
+   <h2 class="mt-3">Users</h2>
 
-   <table>
+   <table class='table'>
+    <thead>
      <tr>
       <th>image</th>
       <th>名前</th>
-      <th></th>
+      <th colspan="3"></th>
      </tr>
-    <% @users.each do |user| %>
-     <tr>
-      <td> <%= image_tag user.get_profile_image(100,100) %> </td>
-      <td> <%= user.name %> </td>
-      <td> <%= link_to "Show",user_path(user.id) %> </td>
-     </tr>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+       <tr>
+        <td> <%= image_tag user.get_profile_image(100,100) %> </td>
+        <td> <%= user.name %> </td>
+        <td> <%= link_to "Show",user_path(user.id) %> </td>
+       </tr>
      <% end %>
+    </tbody>
    </table>
   </div>
  </div>
