--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,14 +7,17 @@
   </div>
 
   <div class="col-md-8 offset-md-1">
-   <h1>Books</h1>
-   <table>
+   <h2>Books</h2>
+   <table class='table table-hover table-inverse'>
+    <thead>
      <tr>
       <th></th>
       <th>本のタイトル</th>
       <th>感想</th>
+      <th colspan="3"></th>
      </tr>
-
+    </thead>
+    <tbody>
     <% @books.each do |book| %>
      <tr>
        <td><%= link_to user_path(@user.id) do %>
@@ -24,6 +27,7 @@
        <td> <%= book.body %> </td>
      </tr>
     <% end %>
+    </tbody>
    </table>
   </div>
  </div>
