[Add]コメント機能追加

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,12 +17,32 @@
            <% end %></td>
        <td><%= link_to @book.title, @book %></td>
        <td><%= @book.body %></td>
+       <td></td>
+       <td>コメント数：<%= @book.book_comments.count %></td>
      <% if @book.user == current_user %>
        <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
        <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
      <% end %>
      </tr>
    </table>
+   
+   <div>
+     <% @book.book_comments.each do |book_comment| %>
+     <p><%= image_tag book_comment.user.get_profile_image(100,100) %></p>
+     <%= book_comment.user.name %>
+     <%= book_comment.comment %>
+     <% if book_comment.user == current_user %>
+      <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+    <% end %>
+     <% end %>
+   </div>
+   <div>
+     <%= form_with model: [@book, @book_comment] do |f| %>
+      <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+      <%= f.submit "送信" %>
+     <% end %>
+   </div>
+
   </div>
  </div>
 </div>
