--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -36,6 +36,7 @@
          <% end %></td>
      <td> <%= link_to book.title, book_path(book.id) %> </td>
      <td> <%= book.body %> </td>
+     <td> <%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
     </tr>
     <% end %>
    </tbody>
