--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,6 +25,7 @@
            <% end %> </td>
        <td> <%= link_to book.title, book_path(book.id) %> </td>
        <td> <%= book.body %> </td>
+       <td><%= link_to " コメント", book_path(book.id) %></td>
      </tr>
     <% end %>
     </tbody>
