--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,7 +16,7 @@
   <div class="col-md-3">
    <%= render 'list', user: @user %>
   </div>
-  
+
   <div class="col-md-8 offset-md-1">
   <h1>Books</h1>
   <table class='table table-hover table-inverse'>
@@ -36,6 +36,17 @@
          <% end %></td>
      <td> <%= link_to book.title, book_path(book.id) %> </td>
      <td> <%= book.body %> </td>
+     <td>
+      <% if book.favorited_by?(current_user) %>
+         <%= link_to book_favorite_path(book), method: :delete do %>
+          ♥<%= book.favorites.count %>
+         <% end %>
+      <% else %>
+        <%= link_to book_favorite_path(book), method: :post do %>
+         ♡<%= book.favorites.count %>
+        <% end %>
+      <% end %>
+     </td>
      <td> <%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
     </tr>
     <% end %>
