--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,7 +17,19 @@
            <% end %></td>
        <td><%= link_to @book.title, @book %></td>
        <td><%= @book.body %></td>
-       <td></td>
+       <td>
+      <% if @book.favorited_by?(current_user) %>
+         <%= link_to book_favorite_path(@book), method: :delete do %>
+          ♥<%= @book.favorites.count %>
+         <% end %>
+       </td>
+      <% else %>
+       <td>
+        <%= link_to book_favorite_path(@book), method: :post do %>
+         ♡<%= @book.favorites.count %> 
+        <% end %>
+       </td>
+      <% end %>
        <td>コメント数：<%= @book.book_comments.count %></td>
      <% if @book.user == current_user %>
        <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
@@ -32,7 +44,7 @@
      <%= book_comment.user.name %>
      <%= book_comment.comment %>
      <% if book_comment.user == current_user %>
-      <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+      <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
     <% end %>
      <% end %>
    </div>
