--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
   <div class="col-md-3">
   <%= render 'books/list', user: @user %>
   </div>
-  
+
   <div class="col-md-8 offset-md-1">
    <h2 class="mt-3">Users</h2>
 
@@ -22,6 +22,19 @@
        <tr>
         <td> <%= image_tag user.get_profile_image(100,100) %> </td>
         <td> <%= user.name %> </td>
+        <td>フォロー数：<%= user.follower.count %> </td>
+        <td>フォワー数：<%= user.followed.count %></td>
+        <td>
+         <% if current_user.following?(user) %>
+     　　    <%= link_to unfollow_path(user), method: :post do %>
+     　　     フォローを外す
+           <% end %>
+      　　 <% else %>
+           <%= link_to follow_path(user), method: :post do %>
+            フォローする
+           <% end %>
+       </td>
+        <% end %>
         <td> <%= link_to "Show",user_path(user.id) %> </td>
        </tr>
      <% end %>
