--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,6 +7,7 @@
   </div>
 
   <div class="col-md-8 offset-md-1">
+   <%= render 'searches/search' %>
    <h2 class="mt-3">Users</h2>
 
    <table class='table'>
