--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,6 +18,7 @@
   </div>
 
   <div class="col-md-8 offset-md-1">
+   <%= render 'searches/search' %>
   <h1>Books</h1>
   <table class='table table-hover table-inverse'>
    <thead>
