--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -38,15 +38,7 @@
      <td> <%= link_to book.title, book_path(book.id) %> </td>
      <td> <%= book.body %> </td>
      <td>
-      <% if book.favorited_by?(current_user) %>
-         <%= link_to book_favorite_path(book), method: :delete do %>
-          ♥<%= book.favorites.count %>
-         <% end %>
-      <% else %>
-        <%= link_to book_favorite_path(book), method: :post do %>
-         ♡<%= book.favorites.count %>
-        <% end %>
-      <% end %>
+      <%= render 'favorites/favorite', book: book %>
      </td>
      <td> <%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
     </tr>
