--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,9 +22,7 @@
          <%= link_to book_favorite_path(@book), method: :delete do %>
           ♥<%= @book.favorites.count %>
          <% end %>
-       </td>
       <% else %>
-       <td>
         <%= link_to book_favorite_path(@book), method: :post do %>
          ♡<%= @book.favorites.count %> 
         <% end %>
@@ -38,19 +36,12 @@
      </tr>
    </table>
    
-   <div>
-     <% @book.book_comments.each do |book_comment| %>
-     <p><%= image_tag book_comment.user.get_profile_image(100,100) %></p>
-     <%= book_comment.user.name %>
-     <%= book_comment.comment %>
-     <% if book_comment.user == current_user %>
-      <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: "btn btn-sm btn-danger" %>
-    <% end %>
-     <% end %>
-   </div>
+   <table class='table'>
+    <%= render 'book_comments/book_comment', book: @book %>
+   </table>
    <div>
      <%= form_with model: [@book, @book_comment] do |f| %>
-      <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+      <%= f.text_area :comment, rows: '5', value: "", placeholder: "コメントをここに" %>
       <%= f.submit "送信" %>
      <% end %>
    </div>
