[Add]コードの編集

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,49 +3,39 @@
 <div class="container">
  <div class="row">
    <div class="col-md-3">
-    <%= render 'list', user: @user %>
-   </div>
+    <h2>User info</h2>
+      <%= render 'users/info', user: @book.user %>
+      <h2 class="mt-3">New book</h2>
+      <%= render 'form', book: Book.new %>
+    </div>
 
-
-  <div class="col-md-8 offset-md-1">
-   <p>Book detail</p>
-   <table class='table'>
+   <div class="col-md-8 offset-md-1">
+    <h2>Book detail</h2>
+    <table class='table'>
      <tr>
-       <td><%= link_to user_path(@book.user.id) do %>
-           <%= image_tag @book.user.get_profile_image(100,100) %><br>
+       <td><%= link_to(@book.user) do %>
+           <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
            <%= @book.user.name%>
            <% end %></td>
        <td><%= link_to @book.title, @book %></td>
        <td><%= @book.body %></td>
        <td>
-      <% if @book.favorited_by?(current_user) %>
-         <%= link_to book_favorite_path(@book), method: :delete do %>
-          ♥<%= @book.favorites.count %>
-         <% end %>
-      <% else %>
-        <%= link_to book_favorite_path(@book), method: :post do %>
-         ♡<%= @book.favorites.count %> 
-        <% end %>
+        <%= render 'favorites/favorite', book: @book %>
        </td>
-      <% end %>
-       <td>コメント数：<%= @book.book_comments.count %></td>
+       <td id="comment_counter">
+         <%= render "book_comments/counter", book: @book, book_comment: @book_comment %>
+       </td>
      <% if @book.user == current_user %>
-       <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-       <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+       <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success  edit_book_#{@book.id}" %></td>
+       <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
      <% end %>
      </tr>
-   </table>
+    </table>
    
-   <table class='table'>
+   <div id="comment_index">
     <%= render 'book_comments/book_comment', book: @book %>
-   </table>
-   <div>
-     <%= form_with model: [@book, @book_comment] do |f| %>
-      <%= f.text_area :comment, rows: '5', value: "", placeholder: "コメントをここに" %>
-      <%= f.submit "送信" %>
-     <% end %>
    </div>
-
+    <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
   </div>
  </div>
 </div>
