--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,38 +1,14 @@
-<%= flash[:alert]%>
 
-<% if @book.errors.any? %>
-<div class="error-message">
- <h3><%= @book.errors.count %>errors prohibited this book from being saved:</h3>
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
- <% end %>
-</div>
 
-<div class="container">
- <div class="row">
-  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-  <h1>Editing Book</h1>
-  <%= form_with model: @book do |f| %>
-
-   <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control book_title' %>
-   </div>
-   <div class="form-group">
-    <%= f.label :opinion %>
-    <%= f.text_area :body, class: 'form-control book_body' %>
-   </div>
-   <div class="form-group">
-    <%= f.submit "Update Book", class: 'btn btn-success' %>
-   </div>
-    <% end %>
-   <%= link_to "Show", book_path(@book.id) %>
-   |
-   <%= link_to "Back", books_path %>
+<div class='container'>
+  <div class='row'>
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+  		<h1>Editing Book</h1>
+    	<%= render 'layouts/errors', obj: @book %>
+  	 	<%= render 'form', book: @book %>
+  	 	<%= link_to 'Show', @book, class: "book_#{@book.id}" %> |
+  	 	<%= link_to 'Back', books_path, class: "back" %>
+    </div>
   </div>
- </div>
 </div>
 
