--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,49 +1,9 @@
-<h2>Results index</h2>
-
-<table class="table table-hover table-inverse">
-  <thead>
-    <tr>
-     <th></th>
-     <th>本のタイトル</th>
-     <th>感想</th>
-     <th colspan="3"></th>
-    </tr>
-  </thead>
-  <% if @range == "User" %>
-    <tbody>
-      <% @users.each do |user| %>
-       <tr>
-        <td> <%= image_tag user.get_profile_image(100,100) %> </td>
-        <td> <%= user.name %> </td>
-        <td>フォロー数：<%= user.follower.count %> </td>
-        <td>フォワー数：<%= user.followed.count %></td>
-        <td>
-         <% if current_user.following?(user) %>
-     　　    <%= link_to unfollow_path(user), method: :post do %>
-     　　     フォローを外す
-           <% end %>
-      　　 <% else %>
-           <%= link_to follow_path(user), method: :post do %>
-            フォローする
-           <% end %>
-       </td>
-        <% end %>
-        <td> <%= link_to "Show",user_path(user.id) %> </td>
-       </tr>
-     <% end %>
-    </tbody>
-  <% else %>
-    <tbody>
-      <% @books.each do |book| %>
-        <tr>
-          <td><%= link_to user_path(book.user.id) do %>
-              <%= image_tag book.user.get_profile_image(100,100) %>
-              <% end %>
-          </td>
-          <td><%= link_to book.title, book_path(book.id) %></td>
-          <td><%= book.body %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  <% end %>
-</table>
+<% if @model == 'user' %>
+	<h3>Users search for "<%= @content %>"</h3>
+  <%= render 'users/index', users: @records %>
+  
+<% elsif @model == 'book' %>
+	<h3>Books search for "<%= @content %>"</h3>
+  <%= render 'books/index', books: @records %>
+  
+<% end %>
