--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,44 +3,17 @@
 <div class="container">
  <div class="row">
   <div class="col-md-3">
-  <%= render 'books/list', user: @user %>
+    <h2>User info</h2>
+      <%= render 'info', user: current_user %>
+    <h2 class="mt-3">New book</h2>
+      <%= render 'books/form', book: @book %>
   </div>
 
   <div class="col-md-8 offset-md-1">
-   <%= render 'searches/search' %>
+   <%= render 'searches/form' %>
    <h2 class="mt-3">Users</h2>
-
-   <table class='table'>
-    <thead>
-     <tr>
-      <th>image</th>
-      <th>名前</th>
-      <th colspan="3"></th>
-     </tr>
-    </thead>
-    <tbody>
-      <% @users.each do |user| %>
-       <tr>
-        <td> <%= image_tag user.get_profile_image(100,100) %> </td>
-        <td> <%= user.name %> </td>
-        <td>フォロー数：<%= user.follower.count %> </td>
-        <td>フォワー数：<%= user.followed.count %></td>
-        <td>
-         <% if current_user.following?(user) %>
-     　　    <%= link_to unfollow_path(user), method: :post do %>
-     　　     フォローを外す
-           <% end %>
-      　　 <% else %>
-           <%= link_to follow_path(user), method: :post do %>
-            フォローする
-           <% end %>
-       </td>
-        <% end %>
-        <td> <%= link_to "Show",user_path(user.id) %> </td>
-       </tr>
-     <% end %>
-    </tbody>
-   </table>
+   <%= render 'index',users: @users %>
   </div>
+  
  </div>
 </div>
