[Add]コメント機能の非同期追加

--- a/app/views/book_comments/_book_comment.html.erb
+++ b/app/views/book_comments/_book_comment.html.erb
@@ -1,6 +1,6 @@
 <table class='table'>
  <tbody>
- <% @book.book_comments.each do |book_comment| %>
+ <% book.book_comments.each do |book_comment| %>
    <tr>
      <td><%= link_to(@book.user) do %>
          <%= image_tag book_comment.user.get_profile_image, size:"100x100" %>
