--- a/app/views/book_comments/destroy.js.erb
+++ b/app/views/book_comments/destroy.js.erb
@@ -1,2 +1,2 @@
-$('#comment_counter').html("<%= j(render 'book_comments/counter', book: @book) %>");
-$('#comment_book_comment').html("<%= j(render 'book_comments/book_comment', book: @book) %>");
+$('#comment_counter').html("<%= j(render 'book_comments/counter', book: @comment.book) %>");
+$('#book_comment').html("<%= j(render 'book_comments/book_comment', book: @comment.book) %>");
