[Add]細かいところ編集

--- a/app/views/book_comments/_book_comment.html.erb
+++ b/app/views/book_comments/_book_comment.html.erb
@@ -2,7 +2,7 @@
  <tbody>
  <% book.book_comments.each do |book_comment| %>
    <tr>
-     <td><%= link_to(@book.user) do %>
+     <td><%= link_to user_path(book_comment.user) do %>
          <%= image_tag book_comment.user.get_profile_image, size:"100x100" %>
          <%= book_comment.user.name %>
         <% end %>
