[Add]閲覧数カウント追加

--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -20,6 +20,7 @@
           <%= render 'favorites/favorite', book: book %>
         </td>
         <td><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
+        <td>閲覧数: <%= book.view_counts.count %></td>
       </tr>
     <% end %>
   </tbody>
