--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,6 +25,8 @@
        <td id="comment_counter">
          <%= render "book_comments/counter", book: @book %>
        </td>
+       <td>閲覧数: <%= @book.view_counts.count %></td>
+       
      <% if @book.user == current_user %>
        <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success  edit_book_#{@book.id}" %></td>
        <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
