--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -14,7 +14,7 @@
           <%= image_tag book.user.get_profile_image, size:'50x50' %>
           <% end %>
         </td>
-        <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
+        <td><%= link_to book.title,book_path(book.id) %></td>
         <td><%= book.body %></td>
         <td id="favorite_btn_<%= book.id %>">
           <%= render 'favorites/favorite', book: book %>
