--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -16,26 +16,34 @@
 	  <th>フォロワー数</th>
 	  <th><%= user.followed.count %></th>
   </tr>
-  <tr>
-	  <th>
-         <% if (current_user.following? @user) && (@user.following? current_user)  %>
-           <% if @isRoom == true %>
-            <p class="user-show-room">
-              <a href="/rooms/<%= @roomId %>" class="btn btn-primary btn-lg">チャットへ</a>
-           <% else %>
-             <%= form_for @room do |f| %>
-               <%= fields_for @entry do |e| %>
-                  <%= e.hidden_field :user_id, value: @user.id %>
-               <% end %>
-                  <%= f.submit "チャットを始める", class:"btn btn-primary btn-lg user-show-chat"%>
-             <% end %>
-           <% end %>
-         <% end %>
-     </th>
-  </tr>
-  
 </table>
-　
+
+<div class='row'>
+   <% if current_user != user%>
+      <% if current_user.following?(user) %>
+          <%= link_to "フォロー外す", unfollow_path(user), method: :post, class: "btn btn-info" %>
+      <% else %>
+          <%= link_to "フォローする", follow_path(user), method: :post, class: "btn btn-success" %>
+      <% end %>
+   <% end %>
+</div>
+
+<div class='row'>
+   <% if (current_user.following? @user) && (@user.following? current_user)  %>
+      <% if @isRoom == true %>
+       <p class="user-show-room">
+        <a href="/rooms/<%= @roomId %>" class="btn btn-primary btn-lg">チャットへ</a>
+     <% else %>
+       <%= form_for @room do |f| %>
+         <%= fields_for @entry do |e| %>
+             <%= e.hidden_field :user_id, value: @user.id %>
+         <% end %>
+             <%= f.submit "チャットを始める", class:"btn btn-primary btn-lg user-show-chat"%>
+       <% end %>
+     <% end %>
+   <% end %>
+</div>
+
 <div class='row'>
   <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block edit_user_#{user.id}" do %>
     <i class="fas fa-user-cog"></i>
