--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,19 +1,19 @@
 <table class='table'>
   <tr><%= image_tag user.get_profile_image, size:'100x100' %></tr>
   <tr>
-	  <th>名前</th>
+	  <th = style="font-size: 15pt">名前</th>
 	  <th><%= user.name %></th>
   </tr>
   <tr>
-	  <th>自己紹介</th>
+	  <th = style="font-size: 15pt">自己紹介</th>
 	  <th><%= user.introduction %></th>
   </tr>
   <tr>
-	  <th>フォロー数</th>
+	  <th = style="font-size: 15pt">フォロー</th>
 	  <th><%= user.follower.count %></th>
   </tr>
   <tr>
-	  <th>フォロワー数</th>
+	  <th = style="font-size: 15pt">フォロワー</th>
 	  <th><%= user.followed.count %></th>
   </tr>
 </table>
@@ -21,9 +21,9 @@
 <div class='row'>
    <% if current_user != user%>
       <% if current_user.following?(user) %>
-          <%= link_to "フォロー外す", unfollow_path(user), method: :post, class: "btn btn-info" %>
+          <%= link_to "unfollow", unfollow_path(user), method: :post, class: "btn btn-sm btn-danger" %>
       <% else %>
-          <%= link_to "フォローする", follow_path(user), method: :post, class: "btn btn-success" %>
+          <%= link_to "follow", follow_path(user), method: :post, class: "btn btn-sm btn-success" %>
       <% end %>
    <% end %>
 </div>
@@ -32,13 +32,13 @@
    <% if (current_user.following? @user) && (@user.following? current_user)  %>
       <% if @isRoom == true %>
        <p class="user-show-room">
-        <a href="/rooms/<%= @roomId %>" class="btn btn-primary btn-lg">チャットへ</a>
+        <a href="/rooms/<%= @roomId %>" class="btn btn-sm btn-primary btn-lg">Chat Room</a>
      <% else %>
        <%= form_for @room do |f| %>
          <%= fields_for @entry do |e| %>
              <%= e.hidden_field :user_id, value: @user.id %>
          <% end %>
-             <%= f.submit "チャットを始める", class:"btn btn-primary btn-lg user-show-chat"%>
+             <%= f.submit "Start Chat", class:"btn btn-sm btn-primary btn-lg user-show-chat"%>
        <% end %>
      <% end %>
    <% end %>
