--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -2,8 +2,8 @@
   <thead>
     <tr>
       <th></th>
-      <th>本のタイトル</th>
-      <th>感想</th>
+      <th = style="font-size: 15pt">本のタイトル</th>
+      <th = style="font-size: 15pt">感想</th>
       <th colspan="3"></th>
     </tr>
   </thead>
