--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,8 +1,10 @@
 <table class='table'>
   <thead>
     <tr>
-      <th>image</th>
-      <th>name</th>
+      <th></th>
+      <th = style="font-size: 14pt">名前</th>
+      <th = style="font-size: 14pt">フォロー</th>
+      <th = style="font-size: 14pt">フォロワー</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -11,21 +13,18 @@
       <tr>
         <td><%= image_tag user.get_profile_image, size: '100x100' %></td>
         <td><%= user.name %></td>
-        <td>フォロー数：<%= user.follower.count %> </td>
-        <td>フォロワー数：<%= user.followed.count %></td>
-        <td>
-        <% if current_user.following?(user) %>
-            <%= link_to unfollow_path(user), method: :post do %>
-     　　     フォローを外す
-            <% end %>
-        <% else %>
-            <%= link_to follow_path(user), method: :post do %>
-            フォローする
-            <% end %>
-        <% end %>
-        </td>
-        
+        <td align="center" ><%= user.follower.count %> </td>
+        <td align="center"><%= user.followed.count %></td>
         <td><%= link_to 'Show', user_path(user.id), class: "user_#{user.id}" %></td>
+        <td>
+         <% if current_user != user%>        
+           <% if current_user.following?(user) %>
+               <%= link_to "unfollow", unfollow_path(user), method: :post, class: "btn btn-sm btn-danger" %>
+           <% else %>
+              <%= link_to "follow", follow_path(user), method: :post, class: "btn btn-sm btn-success" %>
+           <% end %>
+         <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
