--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,11 +11,16 @@
   <tbody>
     <% users.each do |user| %>
       <tr>
-        <td><%= image_tag user.get_profile_image, size: '100x100' %></td>
-        <td><%= user.name %></td>
+        <td><%= link_to (user) do %>
+            <%= image_tag user.get_profile_image, size: '70x70' %>
+            <% end %>
+        </td>
+        <td><%= link_to (user) do %>
+            <%= user.name %>
+            <% end %>
+        </td>
         <td align="center" ><%= user.follower.count %> </td>
         <td align="center"><%= user.followed.count %></td>
-        <td><%= link_to 'Show', user_path(user.id), class: "user_#{user.id}" %></td>
         <td>
          <% if current_user != user%>        
            <% if current_user.following?(user) %>
