[Add]検索機能編集

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,10 @@
      </div>
     </nav>
    </header>
-   <main class="mb-auto">
+   <main>
+     <div class="d-flex justify-content-center mb-2">
+          <%= render 'searches/form' %>
+     </div>
     <%= yield %>
    </main>
   </body>
