--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,9 +1,15 @@
-<% if @model == 'user' %>
-	<h3>Users search for "<%= @content %>"</h3>
-  <%= render 'users/index', users: @records %>
-  
-<% elsif @model == 'book' %>
-	<h3>Books search for "<%= @content %>"</h3>
-  <%= render 'books/index', books: @records %>
-  
-<% end %>
+<div class="container">
+ <div class="row">
+   
+  <div class="col-md-12">
+     <% if @model == "User" %>
+     	<h3>Users search for "<%= @content %>"</h3>
+        <%= render 'users/index', users: @records %>
+     <% else @model == "Book" %>
+	     <h3>Books search for "<%= @content %>"</h3>
+        <%= render 'books/index', books: @records %>
+     <% end %>
+  </div>
+ 
+ </div>
+</div>
