--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,6 +1,6 @@
 <table class='table'>
   <thead>
-    <tr>
+    <tr align="center">
       <th></th>
       <th = style="font-size: 14pt">名前</th>
       <th = style="font-size: 14pt">フォロー</th>
