--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,7 +17,7 @@
         <td><%= link_to book.title,book_path(book.id) %></td>
         <td><%= book.body %></td>
         <td id="favorite_btn_<%= book.id %>">
-          <%= render 'favorites/favorite', book: book %>
+          <%= render 'favorites/btn', book: book %>
         </td>
         <td><%= link_to "#{book.book_comments.count} コメント", book_path(book.id) %></td>
         <td>閲覧数: <%= book.view_counts.count %></td>
