--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -28,7 +28,7 @@
        <td><%= link_to @book.title, @book %></td>
        <td><%= @book.body %></td>
        <td id="favorite_btn_<%= @book.id %>">
-        <%= render 'favorites/favorite', book: @book %>
+        <%= render 'favorites/btn', book: @book %>
        </td>
        <td id="comment_counter">
          <%= render "book_comments/counter", book: @book %>
